Background in `Detail` panel & fixed vertical overflow

--- a/src/css/detail.scss
+++ b/src/css/detail.scss
@@ -12,3 +12,8 @@ div.detail
     padding-top: 36px;
     width: 480px;
 }
+
+div.detailBackground
+{
+    background: $purpleColor;
+}
